src/objects/Work_Item__c.object
<CustomObject>
    <description>Work Items to be used as working objects for the application enhancement case object.</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>Acceptance Criteria are a set of statements, each with a clear pass/fail result, that specify both functional and non-functional requirements, and are applicable at the User Story.</description>
        <inlineHelpText>Acceptance Criteria are a set of statements, each with a clear pass/fail result, that specify both functional and non-functional requirements, and are applicable at the User Story.</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The Case associated with this record.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Defect_Comments__c</fullName>
        <description>Comments to be entered when a defect is found related to this user story.</description>
        <inlineHelpText>Comments to be entered when a defect is found related to this user story.</inlineHelpText>
        <label>Defect Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <label>Defect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Developer Review</fullName>
                </value>
                <value>
                    <fullName>Ready to Re-test</fullName>
                </value>
                <value>
                    <fullName>Not a Defect</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Rich text description of the User Story.</description>
        <inlineHelpText>Rich text description of the User Story.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Developer working in this User Story.</description>
        <inlineHelpText>Developer working in this User Story.</inlineHelpText>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Mirror</fullName>
                </value>
                <value>
                    <fullName>Shadow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Hours_F__c</fullName>
        <formula>CASE(Est_Hours__c, 
&quot;1&quot;, 1,&quot;2&quot;, 2,&quot;3&quot;, 3,&quot;4&quot;, 4,&quot;5&quot;, 5,&quot;6&quot;, 6,&quot;7&quot;, 7,&quot;8&quot;, 8,&quot;9&quot;, 9,&quot;10&quot;, 10, 
&quot;11&quot;, 11,&quot;12&quot;, 12,&quot;13&quot;, 13,&quot;14&quot;, 14,&quot;15&quot;, 15,&quot;16&quot;, 16,&quot;17&quot;, 17,&quot;18&quot;, 18,&quot;19&quot;, 19,&quot;20&quot;, 20, 
&quot;21&quot;, 21,&quot;22&quot;, 22,&quot;23&quot;, 23,&quot;24&quot;, 24,&quot;25&quot;, 25,&quot;26&quot;, 26,&quot;27&quot;, 27,&quot;28&quot;, 28,&quot;29&quot;, 29,&quot;30&quot;, 30, 
&quot;31&quot;, 31,&quot;32&quot;, 32,&quot;33&quot;, 33,&quot;34&quot;, 34,&quot;35&quot;, 35,&quot;36&quot;, 36,&quot;37&quot;, 37,&quot;38&quot;, 38,&quot;39&quot;, 39,&quot;40&quot;, 40, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Hours F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hours__c</fullName>
        <description>Number of hours estimated to complete this User Story.</description>
        <inlineHelpText>Number of hours estimated to complete this User Story.</inlineHelpText>
        <label>Est Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 1</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this User Story.</description>
        <inlineHelpText>Status of this User Story.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In Testing</fullName>
                </value>
                <value>
                    <fullName>Defect Found</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <description>Defect Record Type to be used to track defects or problems</description>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <description>User Story Record Type to be used for main development of projects.</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Est_Hours_is_required_if_Status_is_In_De</fullName>
        <active>true</active>
        <description>Est Hours is required if Status is In Development</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;In Development&apos;),
$RecordType.Name = &quot;User Story&quot;, 
ISBLANK( TEXT(Est_Hours__c)))</errorConditionFormula>
        <errorMessage>Est Hours is required if Status is In Development</errorMessage>
    </validationRules>
</CustomObject>